# rpg

./: .gitignore  CMakeLists.txt  Classes.java  Dialogue.java  DialogueSystem.java  LICENSE  newfile  tasks.md  whatimdoing.txt
Ability/: Ability.cpp  Ability.hpp  CMakeLists.txt
Combat/: CMakeLists.txt  DamageTypes.hpp
Entity/: CMakeLists.txt  Entity.cpp  Entity.hpp
Entity/Character/: Character.cpp  Character.hpp  character.hpp
Entity/NPC/: NPC.hpp
Entity/Race/: Race.cpp  Race.hpp
Item/: CMakeLists.txt  Item.cpp  Item.hpp
Item/Equipment/Weapon/: Weapon.cpp  Weapon.hpp
Magic/: CMakeLists.txt  Spell.cpp  Spell.hpp
StatusEffect/: CMakeLists.txt  StatusEffect.cpp  StatusEffect.hpp
Systems/: CMakeLists.txt
Systems/World/Region/: Region.hpp
Utility/: CMakeLists.txt
Utility/Cartesian/: Cartesian.hpp
Utility/Euclidean/: Euclidean.hpp
